# mylog

./: CMakeLists.txt  LICENSE
example/: main.cpp
include/: logger.h  sink.h
include/sinks/: file_sink.h  stdout_sink.h
src/: logger.cpp
src/sinks/: file_sink.cpp  stdout_sink.cpp
